@@ -1,3 +1,8 @@
+2002-12-18  Jody Goldberg <jody@gnome.org>
+
+	* gnome-keybinding-properties.c : back port havoc's patch to fix
+	  complaints of duplication on reentering the same key.
+
 2002-11-23  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.0.3
